# bot-rio

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  kubernetes.yaml  kustomization.yaml  main.py  pyproject.toml  setup_local.fish
.github/workflows/: deploy.yaml
bot_rio/: bot.py  constants.py  utils.py
